src/main/java/edu/uiowa/jopenmm/OpenMMAmoebaLibrary.java

  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getPMEParameters(const OpenMM_AmoebaMultipoleForce*, double*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getPMEParameters(
      PointerByReference target, DoubleBuffer alpha, IntBuffer nx, IntBuffer ny, IntBuffer nz);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getPMEParameters(const OpenMM_AmoebaMultipoleForce*, double*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getPMEParameters(
      PointerByReference target,
      DoubleByReference alpha,
      IntByReference nx,
      IntByReference ny,
      IntByReference nz);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_setPMEParameters(OpenMM_AmoebaMultipoleForce*, double, int, int, int)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_setPMEParameters(
      PointerByReference target, double alpha, int nx, int ny, int nz);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaMultipoleForce_getAEwald(const OpenMM_AmoebaMultipoleForce*)</code>
   */
  public static native double OpenMM_AmoebaMultipoleForce_getAEwald(PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_setAEwald(OpenMM_AmoebaMultipoleForce*, double)</code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_setAEwald(
      PointerByReference target, double aewald);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaMultipoleForce_getPmeBSplineOrder(const OpenMM_AmoebaMultipoleForce*)</code>
   */
  public static native int OpenMM_AmoebaMultipoleForce_getPmeBSplineOrder(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getPmeGridDimensions(const OpenMM_AmoebaMultipoleForce*, OpenMM_IntArray*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getPmeGridDimensions(
      PointerByReference target, PointerByReference gridDimension);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_setPmeGridDimensions(OpenMM_AmoebaMultipoleForce*, const OpenMM_IntArray*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_setPmeGridDimensions(
      PointerByReference target, PointerByReference gridDimension);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(const OpenMM_AmoebaMultipoleForce*, const OpenMM_Context*, double*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(
      PointerByReference target,
      PointerByReference context,
      DoubleBuffer alpha,
      IntBuffer nx,
      IntBuffer ny,
      IntBuffer nz);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(const OpenMM_AmoebaMultipoleForce*, const OpenMM_Context*, double*, int*, int*, int*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getPMEParametersInContext(
      PointerByReference target,
      PointerByReference context,
      DoubleByReference alpha,
      IntByReference nx,
      IntByReference ny,
      IntByReference nz);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaMultipoleForce_addMultipole(OpenMM_AmoebaMultipoleForce*, double, const OpenMM_DoubleArray*, const OpenMM_DoubleArray*, int, int, int, int, double, double, double)
   * </code>
   */
  public static native int OpenMM_AmoebaMultipoleForce_addMultipole(
      PointerByReference target,
      double charge,
      PointerByReference molecularDipole,
      PointerByReference molecularQuadrupole,
      int axisType,
      int multipoleAtomZ,
      int multipoleAtomX,
      int multipoleAtomY,
      double thole,
      double dampingFactor,
      double polarity);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getMultipoleParameters(const OpenMM_AmoebaMultipoleForce*, int, double*, OpenMM_DoubleArray*, OpenMM_DoubleArray*, int*, int*, int*, int*, double*, double*, double*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getMultipoleParameters(
      PointerByReference target,
      int index,
      DoubleBuffer charge,
      PointerByReference molecularDipole,
      PointerByReference molecularQuadrupole,
      IntBuffer axisType,
      IntBuffer multipoleAtomZ,
      IntBuffer multipoleAtomX,
      IntBuffer multipoleAtomY,
      DoubleBuffer thole,
      DoubleBuffer dampingFactor,
      DoubleBuffer polarity);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getMultipoleParameters(const OpenMM_AmoebaMultipoleForce*, int, double*, OpenMM_DoubleArray*, OpenMM_DoubleArray*, int*, int*, int*, int*, double*, double*, double*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getMultipoleParameters(
      PointerByReference target,
      int index,
      DoubleByReference charge,
      PointerByReference molecularDipole,
      PointerByReference molecularQuadrupole,
      IntByReference axisType,
      IntByReference multipoleAtomZ,
      IntByReference multipoleAtomX,
      IntByReference multipoleAtomY,
      DoubleByReference thole,
      DoubleByReference dampingFactor,
      DoubleByReference polarity);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_setMultipoleParameters(OpenMM_AmoebaMultipoleForce*, int, double, const OpenMM_DoubleArray*, const OpenMM_DoubleArray*, int, int, int, int, double, double, double)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_setMultipoleParameters(
      PointerByReference target,
      int index,
      double charge,
      PointerByReference molecularDipole,
      PointerByReference molecularQuadrupole,
      int axisType,
      int multipoleAtomZ,
      int multipoleAtomX,
      int multipoleAtomY,
      double thole,
      double dampingFactor,
      double polarity);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_setCovalentMap(OpenMM_AmoebaMultipoleForce*, int, OpenMM_AmoebaMultipoleForce_CovalentType, const OpenMM_IntArray*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_setCovalentMap(
      PointerByReference target, int index, int typeId, PointerByReference covalentAtoms);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getCovalentMap(const OpenMM_AmoebaMultipoleForce*, int, OpenMM_AmoebaMultipoleForce_CovalentType, OpenMM_IntArray*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getCovalentMap(
      PointerByReference target, int index, int typeId, PointerByReference covalentAtoms);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getCovalentMaps(const OpenMM_AmoebaMultipoleForce*, int, OpenMM_2D_IntArray*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getCovalentMaps(
      PointerByReference target, int index, PointerByReference covalentLists);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaMultipoleForce_getMutualInducedMaxIterations(const OpenMM_AmoebaMultipoleForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaMultipoleForce_getMutualInducedMaxIterations(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_setMutualInducedMaxIterations(OpenMM_AmoebaMultipoleForce*, int)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_setMutualInducedMaxIterations(
      PointerByReference target, int inputMutualInducedMaxIterations);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaMultipoleForce_getMutualInducedTargetEpsilon(const OpenMM_AmoebaMultipoleForce*)
   * </code>
   */
  public static native double OpenMM_AmoebaMultipoleForce_getMutualInducedTargetEpsilon(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_setMutualInducedTargetEpsilon(OpenMM_AmoebaMultipoleForce*, double)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_setMutualInducedTargetEpsilon(
      PointerByReference target, double inputMutualInducedTargetEpsilon);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_setExtrapolationCoefficients(OpenMM_AmoebaMultipoleForce*, const OpenMM_DoubleArray*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_setExtrapolationCoefficients(
      PointerByReference target, PointerByReference coefficients);
  /**
   * Original signature : <code>
   * OpenMM_DoubleArray* OpenMM_AmoebaMultipoleForce_getExtrapolationCoefficients(const OpenMM_AmoebaMultipoleForce*)
   * </code>
   */
  public static native PointerByReference OpenMM_AmoebaMultipoleForce_getExtrapolationCoefficients(
      PointerByReference target);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaMultipoleForce_getEwaldErrorTolerance(const OpenMM_AmoebaMultipoleForce*)
   * </code>
   */
  public static native double OpenMM_AmoebaMultipoleForce_getEwaldErrorTolerance(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_setEwaldErrorTolerance(OpenMM_AmoebaMultipoleForce*, double)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_setEwaldErrorTolerance(
      PointerByReference target, double tol);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getLabFramePermanentDipoles(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*, OpenMM_Vec3Array*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getLabFramePermanentDipoles(
      PointerByReference target, PointerByReference context, PointerByReference dipoles);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getInducedDipoles(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*, OpenMM_Vec3Array*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getInducedDipoles(
      PointerByReference target, PointerByReference context, PointerByReference dipoles);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getTotalDipoles(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*, OpenMM_Vec3Array*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getTotalDipoles(
      PointerByReference target, PointerByReference context, PointerByReference dipoles);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getElectrostaticPotential(OpenMM_AmoebaMultipoleForce*, const OpenMM_Vec3Array*, OpenMM_Context*, OpenMM_DoubleArray*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getElectrostaticPotential(
      PointerByReference target,
      PointerByReference inputGrid,
      PointerByReference context,
      PointerByReference outputElectrostaticPotential);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_getSystemMultipoleMoments(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*, OpenMM_DoubleArray*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_getSystemMultipoleMoments(
      PointerByReference target,
      PointerByReference context,
      PointerByReference outputMultipoleMoments);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaMultipoleForce_updateParametersInContext(OpenMM_AmoebaMultipoleForce*, OpenMM_Context*)
   * </code>
   */
  public static native void OpenMM_AmoebaMultipoleForce_updateParametersInContext(
      PointerByReference target, PointerByReference context);
